# rknn_ros

./: CMakeLists.txt  package.xml
include/: rknn_ros.h
rknn_ros_msgs/: CMakeLists.txt  package.xml
rknn_ros_msgs/action/: CheckForObjects.action
src/: rknn_ros.cpp  rknn_ros_node.cpp
